[gd_scene load_steps=28 format=2]

[ext_resource path="res://character/sprites/megaman.png" type="Texture" id=1]
[ext_resource path="res://character/scripts/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://character/scripts/states/Jump.gd" type="Script" id=3]
[ext_resource path="res://character/scripts/states/Idle.gd" type="Script" id=4]
[ext_resource path="res://character/scripts/states/Fall.gd" type="Script" id=5]
[ext_resource path="res://character/scripts/states/Run.gd" type="Script" id=6]
[ext_resource path="res://character/scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://character/scripts/states/Ladder.gd" type="Script" id=8]
[ext_resource path="res://character/scripts/states/Stagger.gd" type="Script" id=9]
[ext_resource path="res://character/scripts/states/Spawn.gd" type="Script" id=10]
[ext_resource path="res://character/scripts/states/Death.gd" type="Script" id=11]
[ext_resource path="res://character/scripts/states/Slide.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 96, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 12 ), SubResource( 2 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": false,
"name": "PreRun",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": false,
"name": "Slide",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Spawn",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -12 )
frames = SubResource( 7 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="SlideRaycastLeft" type="RayCast2D" parent="."]
position = Vector2( -7, -14 )
enabled = true
cast_to = Vector2( 0, -2 )

[node name="SlideRaycastRight" type="RayCast2D" parent="."]
position = Vector2( 7, -14 )
enabled = true
cast_to = Vector2( 0, -2 )

[node name="FloorRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Ladder" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="SlideTimer" type="Timer" parent="StateMachine/Slide"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true

[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine/Run" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Slide/SlideTimer" to="StateMachine/Slide" method="_on_SlideTimer_timeout"]
